deployments/k8s_example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: machine-status
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mstat-exporter
  namespace: machine-status
  labels:
    app: mstat-exporter
spec:
  selector:
    matchLabels:
      name: mstat-exporter
  template:
    metadata:
      labels:
        name: mstat-exporter
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: mstat-exporter
                operator: In
                values:
                - 'true'
      containers:
      - name: mstat-exporter
        image: cih9088/machine-status:v0.1
        imagePullPolicy: Always
        args: ["exporter"]
        ports:
        - name: http
          containerPort: 9200
      hostPID: true
      hostNetwork: true
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Pod
metadata:
  name: mstat-server
  namespace: machine-status
  labels:
    app: mstat-server
spec:
  containers:
  - name: mstat-server
    image: cih9088/machine-status:v0.1
    imagePullPolicy: Always
    args: ["server",
        '--wss',
        "--host", "example.com",
        "--root", "mstat",
        "--user", "user1",
        "--pass", "user2",
        "--machine", "machine1.example.com:9200",
        "--machine", "machine2.example.com:9200",
        "--machine", "machine3.example.com:9200",
        ]
    ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mstat-server
  namespace: machine-status
  labels:
    app: mstat-server
spec:
  selector:
    app: mstat-server
  ports:
  - name: tcp
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: mstat-server
  namespace: machine-status
spec:
  tls:
  - hosts:
    - example.com
  rules:
  - host: example.com
    http:
      paths:
      - path: /mstat(/|$)(.*)
        backend:
          serviceName: mstat-server
          servicePort: 80
